# phasor_torch

./: .gitignore  AURORA_HPO_FEATURES.md  CLAUDE.md  README.md  pyproject.toml
configs/: audio_lca_aurora.yaml  audio_lca_small.yaml  audio_lsa_aurora.yaml  audio_lsa_small.yaml  long_fft.yaml
julia_parity/: Project.toml  generate_audio_e2e_from_checkpoint.py  generate_gradparity_phasor_dense.py  generate_gradparity_phasor_lca.py  generate_parity_phasor_dense.py  generate_parity_phasor_lca.py  generate_parity_phasor_lsa.py  generate_parity_phasor_residual.py  generate_parity_readouts.py  generate_parity_resonant_stft.py  load_pytorch.jl  train_and_save_for_julia.py  verify_audio_e2e.jl  verify_end_to_end.jl  verify_gradparity_phasor_dense.jl  verify_gradparity_phasor_lca.jl  verify_phasor_dense.jl  verify_phasor_lca.jl  verify_phasor_lsa.jl  verify_phasor_residual.jl  verify_readouts.jl  verify_resonant_stft.jl
phasor_torch/: __init__.py  config.py  confirm.py  hpo.py  hpo_libe.py  init.py  kernels.py  losses.py  primitives.py  train.py  weights.py
phasor_torch/data/: __init__.py  audio.py  sequence_tasks.py
phasor_torch/layers/: __init__.py  codebook.py  phasor_dense.py  (+6 more)
results/: LINCHPIN_FINDINGS.md  RECONCILIATION_PLAN.md  hpo_sweeps_summary.md
scripts/: analyze_covariance.py  analyze_d1.py  analyze_hpo.py  audio_readout_ab.py  aurora_xpu_smoke.py  bench_xpu.pbs  bench_xpu.py  bullseye_trainability.py  confirm_d1_rezero_cb.pbs  confirm_lca_attn_d1.pbs  confirm_lca_attn_d2.pbs  confirm_lca_d1_rezero_tier1.pbs  confirm_lca_d2.pbs  confirm_lca_d2_rezero_cb.pbs  confirm_lca_d2_rezero_tier1.pbs  confirm_lca_plain_cb.pbs  confirm_lca_plain_tier1.pbs  confirm_lsa.pbs  confirm_smoke.py  confirm_top.pbs  deep_trainability.py  eval_confirm_curves.py  find_nan_trials.py  grad_diverge_probe.py  grad_stability.py  hpo_aurora.pbs  hpo_aurora_d1_rezero.pbs  hpo_aurora_d1_rezero_norecenter.pbs  hpo_aurora_d2.pbs  hpo_aurora_lca_attn_d1.pbs  hpo_aurora_lca_attn_d1_tier1.pbs  hpo_aurora_lca_attn_d2.pbs  hpo_aurora_lca_attn_d2_tier1.pbs  hpo_aurora_lca_d1_rezero_tier1.pbs  hpo_aurora_lca_d2_rezero_tier1.pbs  hpo_aurora_lca_plain_cb.pbs  hpo_aurora_lca_plain_tier1.pbs  hpo_aurora_small.pbs  hpo_aurora_smoke.pbs  linchpin_tir_ffn.py  (+6 more)
(+21 files in other folders)
