[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phasor_torch"
version = "0.0.1"
description = "PyTorch port of PhasorNetworks.jl (training-only, LSA/LCA)"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.10",
  "numpy",
  "h5py",
  "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# HPO driver (ytopt). The ytopt-team forks (dh-scikit-optimize, autotune, ytopt)
# are git-only and installed editable by scripts/setup_hpo_env.sh (which also
# brings in libEnsemble for the multi-node launcher); only the PyPI-installable
# piece is listed here. No Ray — it doesn't work on PBS/HPC nodes.
hpo = ["ConfigSpace"]

[tool.setuptools.packages.find]
where = ["."]
include = ["phasor_torch*"]

[tool.pytest.ini_options]
testpaths = ["phasor_torch/tests"]
addopts = "-ra -q"
